--- a/index.css
+++ b/index.css
@@ -1,132 +1,162 @@
 html, body {
     margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Karla', sans-serif;
 }
 
-/* typography and icons */
+/*typography*/
+
+h1, h2, h3{
+    text-align: center;
+}
+
+h1, h2{
+    color: #EED6D3;
+    margin: 0;
+}
 
 h1{
-    color: #0F8CDF;
-    margin-bottom: 10px;
-    font-size: 20px;
+    font-size: 28px;
 }
 
-i{
-    font-size: 15px;
-    cursor: pointer;
+h2 {
+    font-size: 16px;
 }
 
-.fa-solid{
-    color: #999;
-}
-
-.liked{
-    color: red;
-}
-
-.retweeted {
-  color: limegreen;
+h3{
+    margin: 25px;
 }
 
 /* layout */
 
-main, header{
-    width: 290px;
-    margin: 0 auto;
-}
-
 header{
-    padding-bottom: 25px;
+    background-color: #67595E;
 }
 
-.tweet-input-area {
+.header-inner{
     display: flex;
-    align-items: flex-start;
-    gap: 10px;
+    align-items: center;
+    margin: 0 auto;
+    width: 370px;
+    gap: 15px;
+    padding: 10px 0 0 0;
 }
 
-/* textareas + btn */
-
-textarea{
-    border: none;
-    resize: none;
-    padding: 10px;
-    margin: 0 0 20px 0;
-    height: 60px;
-    width: 100%;
-    font-size: 20px;
-    line-height: 30px;
+.pumpkin-img{
+    width: 80px;
 }
 
-button{
-    background-color: #1DA1F2;
-    border: none;
-    color: white;
-    padding: 10px 19px;
-    border-radius: 20px;
-    width: 100%; 
-    cursor: pointer;
-    font-size: 20px;
-    font-weight: 600;
-}
-
-/* tweet */
-
-.tweet{
-    border-top: 1px solid lightgray;
-    padding: 20px 0 0 0;
-    width: 100%;
-    margin: 15px 0;
-}
-
-.tweet-inner{
+.controls-container{
     display: flex;
-    align-items: flex-start;
-    gap: 10px;
+    flex-direction: column;
+    width: 200px;
+    margin: 0px auto;
 }
 
-.tweet-details{
+/* controls */
+
+.emotion-radios{
     display: flex;
-    font-size: 13px;
-    justify-content: space-between;
-    width: 160px;
+    flex-direction: column;
+    border: 1px solid #bcbcbc;
+    border-radius: 5px;
 }
 
-.tweet-detail{
+.radio{
     display: flex;
-    gap: 4px;
+    align-items: center;
+    border-bottom: 1px solid #bcbcbc;
+    padding: 4px 8px;
 }
 
-.tweet-reply{
-    border-top: 1px solid lightgray;
-    padding: 20px 0 0 0px;
-    margin: 10px 0 10px 40px;
-    width: 80%;
+.radio:first-child{
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
-.handle{
-    font-size: 12px;
-    font-weight: 500;
-    color: #555;
-    margin-top: 0;
+.radio:last-child{
+    border-bottom: 0;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
-.tweet-text{
-    width: 207px;
+label{
     font-size: 14px;
-    line-height: 20px;
+    padding: 3px;
+    width: 100%;
+    cursor: pointer;
 }
 
-/* images */
+.highlight{
+    background-color: #fff0ee;
+    color: #bd301d;
+    font-weight: bold;
+    accent-color: #bd301d;
+}
 
-.profile-pic{
-    border: 1px solid lightgray;
+input[type="radio"]{
+    cursor: pointer;
+}
+
+.gifs-check{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 16px;
+}
+
+.gifs-check-label{
+    width: unset;
+    margin-right: 5px;
+}
+
+.get-image-btn{
+    background-color: #67595e;
+    color: #eed6d3;
+    padding: 15px 19px;
+    font-size: 24px;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 8px;
+}
+
+/* modal */
+
+.meme-modal{
+    display: none; /*flex when displayed*/
+    position: fixed;
+    margin: auto;
+    top: 80px;
+    left: 0;
+    right: 0;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #67595e;
+    border-radius: 5px;
+    width: 420px;
+    height: 490px;
+    background-color: #fff0ee;
+}
+
+.cat-img{
+    max-width: 340px;
+    max-height: 420px;
+    border-radius: 5px;
+}
+
+.meme-modal-close-btn{
+    position: absolute;
+    top: 2%;
+    right: 2%;
+    background-color: transparent;
+    border: 2px solid #555;
+    color: #555;
     border-radius: 50%;
-    width: 48px;
+    padding: 2px 6px;
+    font-size: 14px;
 }
 
-/* utility */
-.hidden{
-    display: none;
+.meme-modal-close-btn:hover{
+    color: white;
+    background-color: #bd301d;
+    border: 2px solid #bd301d;
 }
